<resources>
    <string name="app_name">AMazeByJamesYao</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="maze_welcome">Welcome Human!</string>
    <string name="difficulty">Difficulty</string>
    <string name="gen_algorithm">Maze Type</string>
    <string name="rooms">Rooms Present</string>
    <string name="revisit">Revisit</string>
    <string name="explore">Explore</string>
    <string name="temp_maze_replacement">Shortcut</string>
    <string name="temp_manually">Manually Play</string>
    <string name="temp_animation">Animation Play</string>
    <string name="temp_manual_title">Manual State</string>
    <string name="temp_animation_title">Animation State</string>
    <string name="winning_title">You Won!</string>
    <string name="losing_title">You\'ve been captured!</string>
    <string name="win_option">Go2Winning</string>
    <string name="lose_option">Go2Losing</string>
    <string-array
        name="select_generation_alg">
        <item
            >Eller</item>
        <item
            >Prim</item>
        <item
            >DFS</item>
    </string-array>
    <string-array
        name="driver_selection">
        <item
            >You</item>
        <item
            >Wizard</item>
        <item
            >WallFollower</item>
    </string-array>
    <string-array
        name="robot_quality">
        <item
            >Premium</item>
        <item
            >Mediocre</item>
        <item
            >Soso</item>
        <item
            >Shaky</item>
    </string-array>
    <string name="driver_selection_label">Select Driver:</string>
    <string name="robot_quality_label">Choose Robot Quality:</string>
    <string name="map_label">Show Map</string>
    <string name="solution_label">Solution</string>
    <string name="visible_label">Visible</string>
    <string name="jump_button">Jump</string>
    <string name="forward_button">Forward</string>
    <string name="left_button">Left</string>
    <string name="right_button">Right</string>
    <string name="end_screen_directions">Press the back button to return to main screen.</string>
    <string name="animation_remaining_energy_label">Remaining Energy:</string>
    <string name="animation_start_stop_label">Start/Pause:</string>
    <string name="animation_speed_label">Animation Speed:</string>
    <string name="path_length_energy_info">Path length and energy info</string>
</resources>