<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="winning"
        android:text="@string/temp_maze_replacement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/temp_manual_title"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:onClick="winning"
        android:text="@string/win_option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:onClick="losing"
        android:text="@string/lose_option"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/map_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solution_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/visible_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/map_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:onClick="mapButton"
        android:text="@string/map_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ToggleButton
        android:id="@+id/solution_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="solutionButton"
        android:text="@string/solution_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/map_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/visible_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/solution_toggle"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="forwardButton"
        android:text="@string/forward_button"
        app:layout_constraintBottom_toTopOf="@+id/left_button"
        app:layout_constraintStart_toEndOf="@+id/left_button" />

    <Button
        android:id="@+id/jump_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="jumpButton"
        android:text="@string/jump_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="leftButton"
        android:text="@string/left_button"
        app:layout_constraintBottom_toBottomOf="@+id/jump_button"
        app:layout_constraintEnd_toStartOf="@+id/jump_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="rightButton"
        android:text="@string/right_button"
        app:layout_constraintBottom_toBottomOf="@+id/jump_button"
        app:layout_constraintStart_toEndOf="@+id/jump_button" />

    <edu.wm.cs.cs301.jamesyao.gui.MazePanel
        android:id="@+id/manualPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@id/solution_toggle" />

</androidx.constraintlayout.widget.ConstraintLayout>